[project]
name = "leetcode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pr0f37 🚀", email = "adam.nowik@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "debugpy>=1.8.14",
]

[project.scripts]
leetcode = "leetcode:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
]
